@@ -76,6 +76,8 @@ Thanks to Björn "Vampire" Kautler, Matthieu Casanova for contributing to this r
 
 - Status bar encoding widget allow to choose between updating the encoding or reloading
   with a new encoding (Matthieu Casanova)
+  
+- Updated java mode for new keywords introduced up to Java 17. (Dale Anson)  
 
 }}}
 
